tests/error/protocol_errors_py312/doesnt_implement.err
Error: Missing protocol implementation (at $FILE:25:22)
   | 
23 | @guppy
24 | def baz(f: FooInt) -> None:
25 |     return eat_foostr(f)
   |                       ^ Type `FooInt` does not implement protocol `Foo[str]`

Guppy compilation failed due to 1 previous error
